syntax = "proto3";
package com.reactivearchitecturecookbook.faceextract.v1m0;

message ExtractFace {
  string mime_type = 1;
  bytes content = 2;
}
